--- a/calendar.html
+++ b/calendar.html
@@ -141,7 +141,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Add Classes</h1>
+            <h1 class="h3 mb-0 text-gray-800">The Sandbox</h1>
             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Done! </a>
           </div>
 
