--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <label class="custom-control-label" for="customCheck">Remember Me</label>
                       </div>
                     </div>
-                    <a href="form.html" class="btn btn-primary btn-user btn-block">
+                    <a href="landing.html" class="btn btn-primary btn-user btn-block">
                       Login
                     </a>
 
