--- a/calendar.html
+++ b/calendar.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
+
 <html lang="en">
-
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,197 +18,200 @@
 
 </head>
 
-<body id="page-top">
+<body>
+  <body id="page-top">
 
-  <!-- Page Wrapper -->
-  <div id="wrapper">
+    <!-- Page Wrapper -->
+    <div id="wrapper">
 
-    <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+      <!-- Sidebar -->
+      <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-      <!-- Sidebar - Brand -->
-      <!-- This should be the name of whoever is logged into the sandbox -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+        <!-- Sidebar - Brand -->
+        <!-- This should be the name of whoever is logged into the sandbox -->
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+          <div class="sidebar-brand-icon rotate-n-15">
+            <i class="fas fa-laugh-wink"></i>
+          </div>
+          <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        </a>
+
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+
+        <!-- Heading -->
+        <div class="sidebar-heading">
+          Sandbox
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
-      </a>
 
-      <!-- Divider -->
-      <hr class="sidebar-divider">
+        <!-- Nav Item - Form -->
+        <li class="nav-item">
+          <a class="nav-link" href="form.html">
+            <i class="fas fa-fw fa-wrench"></i>
+            <span>Form</span></a>
+        </li>
 
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Sandbox
-      </div>
+        <!-- Nav Item - Calendar -->
+        <li class="nav-item">
+          <a class="nav-link" href="calendar.html">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Calendar</span></a>
+        </li>
 
-      <!-- Nav Item - Form -->
-      <li class="nav-item">
-        <a class="nav-link" href="form.html">
-          <i class="fas fa-fw fa-wrench"></i>
-          <span>Form</span></a>
-      </li>
+      </ul>
+      <!-- End of Sidebar -->
 
-      <!-- Nav Item - Calendar -->
-      <li class="nav-item">
-        <a class="nav-link" href="calendar.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Calendar</span></a>
-      </li>
+      <!-- Content Wrapper -->
+      <div id="content-wrapper" class="d-flex flex-column">
 
-    </ul>
-    <!-- End of Sidebar -->
+        <!-- Main Content -->
+        <div id="content">
 
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
+          <!-- Topbar -->
+          <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-      <!-- Main Content -->
-      <div id="content">
+            <!-- Sidebar Toggle (Topbar) -->
+            <!-- Keep this! -->
+            <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+              <i class="fa fa-bars"></i>
+            </button>
 
-        <!-- Topbar -->
-        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-
-          <!-- Sidebar Toggle (Topbar) -->
-          <!-- Keep this! -->
-          <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-            <i class="fa fa-bars"></i>
-          </button>
-
-          <!-- Topbar Search -->
-          <!-- Do we actually need this?? -->
-          <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-            <div class="input-group">
-              <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-primary" type="button">
-                  <i class="fas fa-search fa-sm"></i>
-                </button>
+            <!-- Topbar Search -->
+            <!-- Do we actually need this?? -->
+            <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+              <div class="input-group">
+                <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-primary" type="button">
+                    <i class="fas fa-search fa-sm"></i>
+                  </button>
+                </div>
               </div>
-            </div>
-          </form>
+            </form>
 
-          <!-- Topbar Navbar -->
-          <ul class="navbar-nav ml-auto">
+            <!-- Topbar Navbar -->
+            <ul class="navbar-nav ml-auto">
 
-            <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-            <li class="nav-item dropdown no-arrow d-sm-none">
-              <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-search fa-fw"></i>
-              </a>
-              <!-- Dropdown - Messages -->
-              <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                <form class="form-inline mr-auto w-100 navbar-search">
-                  <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                      <button class="btn btn-primary" type="button">
-                        <i class="fas fa-search fa-sm"></i>
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </li>
-
-            <div class="topbar-divider d-none d-sm-block"></div>
-
-            <!-- Nav Item - User Information -->
-            <!-- Keep this! Need to adjust it to match our user... -->
-            <li class="nav-item dropdown no-arrow">
-              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
-              </a>
-              <!-- Dropdown - Logout Option -->
-              <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
+              <!-- Nav Item - Search Dropdown (Visible Only XS) -->
+              <li class="nav-item dropdown no-arrow d-sm-none">
+                <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fas fa-search fa-fw"></i>
                 </a>
-              </div>
-            </li>
+                <!-- Dropdown - Messages -->
+                <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
+                  <form class="form-inline mr-auto w-100 navbar-search">
+                    <div class="input-group">
+                      <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                      <div class="input-group-append">
+                        <button class="btn btn-primary" type="button">
+                          <i class="fas fa-search fa-sm"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </li>
 
-          </ul>
+              <div class="topbar-divider d-none d-sm-block"></div>
 
-        </nav>
-        <!-- End of Topbar -->
+              <!-- Nav Item - User Information -->
+              <!-- Keep this! Need to adjust it to match our user... -->
+              <li class="nav-item dropdown no-arrow">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                  <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                </a>
+                <!-- Dropdown - Logout Option -->
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                  <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Logout
+                  </a>
+                </div>
+              </li>
 
-        <!-- Begin Page Content -->
-        <div class="container-fluid">
+            </ul>
 
-          <!-- Page Heading -->
-          <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">The Sandbox</h1>
-            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Done! </a>
-          </div>
+          </nav>
+          <!-- End of Topbar -->
 
+          <!-- Begin Page Content -->
+          <div class="container-fluid">
 
-
-
-
-          <!-- ADD FORM HERE! PAGE 1 -->
-
-
-
-
-
-
-
-
-
-
-
-
+            <!-- Page Heading -->
+            <!-- This should link to the calendar -->
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+              <h1 class="h3 mb-0 text-gray-800">Create Class List</h1>
+              <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-table fa-sm text-white-50"></i> Calendar </a>
+            </div>
+  <div class="content">
+    <div class="calendar-container">
+      <div class="calendar">
+        <div class="year-header">
+          <span class="left-button" id="prev"> &lang; </span>
+          <span class="year" id="label"></span>
+          <span class="right-button" id="next"> &rang; </span>
         </div>
-        <!-- /.container-fluid -->
+        <table class="months-table">
+          <tbody>
+            <tr class="months-row">
+              <td class="month">Jan</td>
+              <td class="month">Feb</td>
+              <td class="month">Mar</td>
+              <td class="month">Apr</td>
+              <td class="month">May</td>
+              <td class="month">Jun</td>
+              <td class="month">Jul</td>
+              <td class="month">Aug</td>
+              <td class="month">Sep</td>
+              <td class="month">Oct</td>
+              <td class="month">Nov</td>
+              <td class="month">Dec</td>
+            </tr>
+          </tbody>
+        </table>
 
+        <table class="days-table">
+          <td class="day">Sun</td>
+          <td class="day">Mon</td>
+          <td class="day">Tue</td>
+          <td class="day">Wed</td>
+          <td class="day">Thu</td>
+          <td class="day">Fri</td>
+          <td class="day">Sat</td>
+        </table>
+        <div class="frame">
+          <table class="dates-table">
+              <tbody class="tbody">
+              </tbody>
+          </table>
+        </div>
+        <button class="button" id="add-button">Add Event</button>
       </div>
-      <!-- End of Main Content -->
-
-      <!-- Footer -->
-      <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-          <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2019</span>
+    </div>
+    <div class="events-container">
+    </div>
+    <div class="dialog" id="dialog">
+        <h2 class="dialog-header"> Add New Event </h2>
+        <form class="form" id="form">
+          <div class="form-container" align="center">
+            <label class="form-label" id="valueFromMyButton" for="name">Event name</label>
+            <input class="input" type="text" id="name" maxlength="36">
+            <label class="form-label" id="valueFromMyButton" for="count">Time</label>
+            <input class="input" type="time" id="count" maxlength="36">
+            <input type="button" value="Cancel" class="button" id="cancel-button">
+            <input type="button" value="OK" class="button" id="ok-button">
           </div>
-        </div>
-      </footer>
-      <!-- End of Footer -->
-
-    </div>
-    <!-- End of Content Wrapper -->
-
-  </div>
-  <!-- End of Page Wrapper -->
-
-  <!-- Scroll to Top Button-->
-  <!-- Keep this! -->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-
-  <!-- Logout Modal-->
-  <!-- Keep this! -->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
-        </div>
+        </form>
       </div>
-    </div>
   </div>
-
-  <!-- Bootstrap core JavaScript-->
+  <!-- Dialog Box-->
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous">
+  </script>
+  <script src="calendar.js"></script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -219,7 +220,5 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
-
 </body>
-
 </html>
