description of project and instructions

--- a/landing.html
+++ b/landing.html
@@ -59,6 +59,13 @@
           <span>View Your Schedule</span></a>
       </li>
 
+      <!-- Nav Item - Export -->
+      <li class="nav-item">
+        <a class="nav-link" href="export.html">
+          <i class="fas fa-download fa-sm text-white-50"></i>
+          <span>Export Options</span></a>
+      </li>
+  
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
 
@@ -120,122 +127,82 @@
           </div>
 
 
-          <!-- Content Row -->
-          <div class="row">
+          <!-- Intro / Explanation-->
+          <div class="card">
+              <div class="card-body">
+  
+  
+                <p class="m-0 font-weight-bold text-gray-800"> 
+                  This interface was designed to ease in the process of registration.<br>
+                  <br>
+                  <b>Why?</b><br>
+                  <ul class="m-0 text-gray-800">
+                    <li>
+                      Sometimes, when registering for courses, an Augsburg Student has a list of courses he may need 
+                      but is not sure how they'll fit into a schedule.
+                    </li>
+                    <li>
+                      Some of these classes are higher priority than others...!
+                    </li>
+                    <li>
+                      Some classes may be offered at different times or are held on different days of the week, others aren't.
+                    </li>
+                    <li>
+                      Augsburg's Records & Registration can be difficult to navigate when choosing which classes to take.
+                    </li>
+                  </ul>
+                </p>
 
-            <!-- Content Column -->
-            <div class="col-lg-6 mb-4">
+                <p class="m-0 font-weight-bold text-gray-800"> 
+                  <b>The goal:</b> Arrange potential classes to make a desirable schedule without Records & Registration. <br>
+                  Then, export the final schedule of classes to a list that's easy to use as reference when registering. <br>
+                  <br>
 
-              <!-- Project Card Example -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Current classes</h6>
-                </div>
-                <div class="card-body">
-                  <h4 class="small font-weight-bold">Class 1<span class="float-right">20%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Class 2 <span class="float-right">40%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Class 3 <span class="float-right">60%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Class 4 <span class="float-right">80%</span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                 
-                </div>
+                  <b>Here's how it works:</b><br>
+                  <ol class="m-0 text-gray-800">
+                    <li>
+                      <b>Using Records & Registration, find the classes you're interested in.</b>
+                      <ul>
+                        <li>
+                          Be liberal -  If there are scheduling conflicts, add them anyway! If there are duplicates, add them all! Everything will be visualized and sorted out in the sandbox.</i>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <b>Add the potential classes to your list of classes in the sandbox.</b>
+                      <ul>
+                        <li>
+                          Specify class name, the time and day it's held, and how important it is to take the course this semester.
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <b>Visualize your schedule with the drag and drop features.</b>
+                      <ul>
+                        <li>
+                          Move things around, see what classes look like in a different arrangement. Find out what classes are held simultaneously.
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <b>When you're satisfied, export the schedule to a list of classes.</b>
+                      <ul>
+                        <li>
+                          This list will make things MUCH easier when navigating Records & Registration when it is time to sign up for classes!
+                        </li>
+                      </ul>
+                    </li>
+                  </ol>
+                </p>
+                <!-- End of explanation -->
+  
               </div>
-
-              <!-- Color System -->
-              <div class="row">
-                <div class="col-lg-6 mb-4">
-                  <div class="card bg-primary text-white shadow">
-                    <div class="card-body">
-                      Primary
-                      <div class="text-white-50 small">#4e73df</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                  <div class="card bg-success text-white shadow">
-                    <div class="card-body">
-                      Success
-                      <div class="text-white-50 small">#1cc88a</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                  <div class="card bg-info text-white shadow">
-                    <div class="card-body">
-                      Info
-                      <div class="text-white-50 small">#36b9cc</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                  <div class="card bg-warning text-white shadow">
-                    <div class="card-body">
-                      Warning
-                      <div class="text-white-50 small">#f6c23e</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                  <div class="card bg-danger text-white shadow">
-                    <div class="card-body">
-                      Danger
-                      <div class="text-white-50 small">#e74a3b</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                  <div class="card bg-secondary text-white shadow">
-                    <div class="card-body">
-                      Secondary
-                      <div class="text-white-50 small">#858796</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
             </div>
+            <!-- End of card -->
 
-            <div class="col-lg-6 mb-4">
-
-              <!-- Illustrations -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Illustrations</h6>
-                </div>
-                <div class="card-body">
-                  <div class="text-center">
-                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="img/undraw_posting_photo.svg" alt="">
-                  </div>
-                  <p>Add some quality, svg illustrations to your project courtesy of <a target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a constantly updated collection of beautiful svg images that you can use completely free and without attribution!</p>
-                  <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a>
-                </div>
-              </div>
-
-              <!-- Approach -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
-                </div>
-                <div class="card-body">
-                  <p>SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce CSS bloat and poor page performance. Custom CSS classes are used to create custom components and custom utility classes.</p>
-                  <p class="mb-0">Before working with this theme, you should become familiar with the Bootstrap framework, especially the utility classes.</p>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
+          <br>
+          <a href= "form.html" class="btn btn-primary" style="background-color: #660033;"> <b>Click here to start adding classes! </b></a>
+  
         </div>
         <!-- /.container-fluid -->
 
