jared's changes. commented out draggable cards

--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Calendar</title>
+  <title>SB Admin 2 - Blank</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
@@ -125,44 +125,277 @@
 
           <!-- Content Row -->
           <div class="row">
-            <!-- Left Column -->
-            <div class="col-4">
-              <!-- Current List of classes Card -->
-              <div class="card shadow mb-4" style="height: 730px;">
+
+          <!-- Left Column -->
+          <div class="col-4">
+
+            <!-- Current List of classes Card -->
+            <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-gray-800">
-                    Your list of classes:
-                  </h6>
+                  <h6 class="m-0 font-weight-bold text-gray-800"> Your list of classes: </h6>
                 </div>
                 <div class="card-body">
+
                   <div class="container">
-                    <br />
-                    <div class="row" style="margin-top: 590px;">
-                      <a href="form.html" class="btn btn-outline-secondary">
-                        Edit this class list
-                      </a>
+
+                    <div class="card bg-light mb-3">
+                      <div class="card-body">
+                        <div class="col">
+                          LAT 102
+                        </div>
+                        <div class="col">
+                          Beginning Latin 2
+                        </div>
+                        <div class="col">
+                          11:10 - 12:20 : MWF
+                        </div>
+                        <div class="col">
+                          *low priority*
+                        </div>
+                      </div>
                     </div>
+                    <!-- End card-->
+
+                    <div class="card text-white bg-dark mb-3">
+                      <div class="card-body">
+                        <div class="col">
+                          CSC 451
+                        </div>
+                        <div class="col">
+                          Compilers
+                        </div>
+                        <div class="col">
+                          1:50 - 3:30 : TTh
+                        </div>
+                        <div class="col">
+                          *high priority*
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End card-->
+
+                    <div class="card bg-light mb-3">
+                      <div class="card-body">
+                        <div class="col">
+                          COM 111
+                        </div>
+                        <div class="col">
+                          Public Speaking
+                        </div>
+                        <div class="col">
+                          11:10 - 12:20 : MWF
+                        </div>
+                        <div class="col">
+                          *low priority*
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End card-->
+
+                    <div class="card text-white bg-secondary mb-3">
+                      <div class="card-body">
+                        <div class="col">
+                          CSC 395B
+                        </div>
+                        <div class="col">
+                          Real-Time Embedded Systems
+                        </div>
+                        <div class="col">
+                          9:40 - 11:10 : TTh
+                        </div>
+                        <div class="col">
+                          *neutral priority*
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End card-->
+                    
+                    <br>
+                    <div class="row">
+                      <a href= "form.html" class="btn btn-outline-secondary"> Edit this class list </a>
+                    </div>
+
                   </div>
                   <!-- End Class list container-->
+                      
                 </div>
                 <!-- End of Card Body -->
               </div>
               <!-- End of Card -->
             </div>
-            <!-- End of Left Column -->
+          <!-- End of Left Column -->
 
-            <!-- Right Column -->
-            <div class="col-8">
-              <!-- Current List of classes Card -->
-              <div class="card shadow mb-4" style="height: 600px;">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-gray-800">
-                    Schedule goes here:
-                  </h6>
-                </div>
-                <div class="card-body">
-                  <div class="container">
-                    <!-- SCHEDULE -->
+          <!-- Right Column -->
+          <div class="col-8">
+            <!-- Current List of classes Card -->
+            <div class="card shadow mb-4" style="height: 900px;">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-gray-800">
+                  Your Schedule:
+                </h6>
+              </div>
+              <div class="card-body">
+                <div class="container">
+                  <!-- SCHEDULE -->
+                  <div class="row align-items-start">
+                    <div class="col">
+                      Monday
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">8:00-9:10</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">9:20-10:30</p>
+                      </div>
+                      <div class="card border-secondary mb-3">
+                        <h6 class="card-title">Chapel</h5>
+                        <p class="card-text">10:40-11:00</p>
+                      </div>
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">LAT 102</h5>
+                        <p class="card-text">11:10-12:20.</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">12:30-1:40</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">1:50-3:00</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">3:10-4:20</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">4:30-5:40</p>
+                      </div>
+                    </div>
+                    <div class="col">
+                      Tuesday
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">CSC 395 B </h5>
+                        <p class="card-text">9:40-11:20.</p>
+                      </div>
+                      <div class="card border-secondary mb-3">
+                        <h6 class="card-title">Chapel</h5>
+                        <p class="card-text">11:30-11:50</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">12:00-1:40</p>
+                      </div>
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">CSC 451</h5>
+                        <p class="card-text">1:50-3:30</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">3:40-5:20</p>
+                      </div>
+                    </div>
+                    <div class="col">
+                      Wednesday
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">8:00-9:10</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">9:20-10:30</p>
+                      </div>
+                      <div class="card border-secondary mb-3">
+                        <h6 class="card-title">Chapel</h5>
+                        <p class="card-text">10:40-11:00</p>
+                      </div>
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">LAT 102</h5>
+                        <p class="card-text">11:10-12:20.</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">12:30-1:40</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">1:50-3:00</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">3:10-4:20</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">4:30-5:40</p>
+                      </div>
+                    </div>
+                    <div class="col">
+                      Thursday
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">CSC 395 B </h5>
+                        <p class="card-text">9:40-11:20.</p>
+                      </div>
+                      <div class="card border-secondary mb-3">
+                        <h6 class="card-title">Chapel</h5>
+                        <p class="card-text">11:30-11:50</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">12:00-1:40</p>
+                      </div>
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">CSC 451</h5>
+                        <p class="card-text">1:50-3:30</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">3:40-5:20</p>
+                      </div>
+                    </div>
+                    <div class="col">
+                      Friday
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">8:00-9:10</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">9:20-10:30</p>
+                      </div>
+                      <div class="card border-secondary mb-3">
+                        <h6 class="card-title">Chapel</h5>
+                        <p class="card-text">10:40-11:00</p>
+                      </div>
+                      <div class="card border-success mb-3">
+                        <h6 class="card-title">LAT 102</h5>
+                        <p class="card-text">11:10-12:20.</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">12:30-1:40</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">1:50-3:00</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">3:10-4:20</p>
+                      </div>
+                      <div class="card-body">
+                        <h6 class="card-title"></h5>
+                        <p class="card-text">4:30-5:40</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <div class="container">
+
+                      </div>
+
+                    </div>
                   </div>
                   <!-- End Class list container-->
                 </div>
@@ -173,7 +406,7 @@
               <!-- CARD FOR SCHEDULE  STARTING -->
 
               <!-- Draggable DIV -->
-              <div class="container" id="mydiv" style="left: -379px; top: 77px;">
+              <!--<div class="container" id="mydiv" style="left: -379px; top: 77px;">
                 <div class="row" id="mydivheader">
                   <div class="card text-white bg-dark mb-3">
                     <div class="card-body">
@@ -253,8 +486,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
- 
+              </div>-->
 
               <!-- CARD FOR SCHEDULE ENDING -->
 
@@ -266,65 +498,6 @@
           </div>
           <!-- End of Row -->
 
-          <!-- <div class="content">
-            <div class="calendar-container">
-              <div class="calendar">
-                <div class="year-header">
-                  <span class="left-button" id="prev"> &lang; </span>
-                  <span class="year" id="label"></span>
-                  <span class="right-button" id="next"> &rang; </span>
-                </div>
-                <table class="months-table">
-                  <tbody>
-                    <tr class="months-row">
-                      <td class="month">Jan</td>
-                      <td class="month">Feb</td>
-                      <td class="month">Mar</td>
-                      <td class="month">Apr</td>
-                      <td class="month">May</td>
-                      <td class="month">Jun</td>
-                      <td class="month">Jul</td>
-                      <td class="month">Aug</td>
-                      <td class="month">Sep</td>
-                      <td class="month">Oct</td>
-                      <td class="month">Nov</td>
-                      <td class="month">Dec</td>
-                    </tr>
-                  </tbody>
-                </table>
-
-                <table class="days-table">
-                  <td class="day">Sun</td>
-                  <td class="day">Mon</td>
-                  <td class="day">Tue</td>
-                  <td class="day">Wed</td>
-                  <td class="day">Thu</td>
-                  <td class="day">Fri</td>
-                  <td class="day">Sat</td>
-                </table>
-                <div class="frame">
-                  <table class="dates-table">
-                    <tbody class="tbody"></tbody>
-                  </table>
-                </div>
-                <button class="button" id="add-button">Add Event</button>
-              </div>
-            </div>
-            <div class="events-container"></div>
-            <div class="dialog" id="dialog">
-              <h2 class="dialog-header">Add New Event</h2>
-              <form class="form" id="form">
-                <div class="form-container" align="center">
-                  <label class="form-label" id="valueFromMyButton" for="name">Event name</label>
-                  <input class="input" type="text" id="name" maxlength="36" />
-                  <label class="form-label" id="valueFromMyButton" for="count">Time</label>
-                  <input class="input" type="time" id="count" maxlength="36" />
-                  <input type="button" value="Cancel" class="button" id="cancel-button" />
-                  <input type="button" value="OK" class="button" id="ok-button" />
-                </div>
-              </form>
-            </div>
-          </div> -->
           <!-- Dialog Box-->
           <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
